Bugfix-7: maxpermsize is not support in Java 8