@@ -23,7 +23,7 @@ ensime {
     targetFile = "${project.buildDir}/ensime_file"
     cacheDir = "${project.buildDir}/ensime_cache"
     javaHome = "${System.env.JAVA_HOME}"
-    javaFlags = ["-Xms1024m", "-Xmx1024m", "-XX:MaxPermSize=256m"]
+    javaFlags = ["-Xms1024m", "-Xmx1024m"]
     referenceSourceRoots = [javaHome + "/src.zip"]
     scalaVersion = scalaLibraryVersion
     compilerArgs = ["-feature", "-deprecation"]
